<resources>
    <string name="app_name">Maya RPG</string>

    <string name="welcome_text">BEM-VINDO</string>
    <string name="btn_start_desc">Iniciar aplicativo</string>
    <string name="desc_logo">Logo Maya RPG</string>
    <string name="login_title">LOGIN</string>
    <string name="login_email_label">Email/Telefone:</string>
    <string name="login_password_label">Senha:</string>
    <string name="login_terms">Aceito os Termos de Uso</string>
    <string name="login_forgot_password">esqueceu a senha?</string>
    <string name="login_signup_prompt">Ainda não possui cadastro? Cadastre-se</string>
    <string name="login_social_label">Entre de Outras Formas</string>
    <string name="btn_entrar">ENTRAR</string>

    <string name="content_desc_back">Voltar</string>
    <string name="content_desc_nav_home">Tela inicial</string>
    <string name="content_desc_nav_exercises">Exercícios</string>
    <string name="content_desc_nav_evolution">Evolução</string>
    <string name="content_desc_nav_more">Mais opções</string>
...
